[gd_scene load_steps=33 format=2]

[ext_resource path="res://Scripts/Entities/navigator.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Entities/unit.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Other/shadow_0.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Mobs/Unit50/Mobile units 51 A phase 2.1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Mobs/Unit50/Mobile units 51 A phase 2.2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Mobs/Unit50/Mobile units 51 A phase 2.3.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Mobs/Unit50/Mobile units 51 A phase 2.4.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Mobs/Unit50/Mobile units 51 A phase 2.5.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Mobs/Unit50/Mobile units 51 A phase 2.6.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Mobs/Unit50/Mobile units 51 A phase 2.7.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Mobs/Unit50/Mobile units 51 A phase 2.8.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Mobs/Unit50/Mobile units 51 A phase 2.9.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Mobs/Unit50/Mobile units 51 A phase 2.10.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Mobs/Unit50/Mobile units 51 A Mode Pre shooting 0.1.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Mobs/Unit50/Mobile units 51 A Mode Pre shooting 0.2.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Mobs/Unit50/Mobile units 51 A Mode Pre shooting 0.3.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Mobs/Unit50/Mobile units 51 A Mode shooting 0.1.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Mobs/Unit50/Mobile units 51 A Mode shooting 0.2.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Mobs/Unit50/Mobile units 51 A Mode shooting 0.3.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Mobs/Unit50/Mobile units 51 A Mode shooting 1.2.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Mobs/Unit50/Mobile units 51 A Mode shooting 1.3.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Mobs/Unit50/Mobile units 51 A Mode shooting 1.4.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Mobs/Unit50/Mobile units 51 A Mode shooting 1.5.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Mobs/Unit50/Mobile units 51 A Mode shooting 1.6.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Mobs/Unit50/Mobile units 51 A Mode shooting 1.7.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Mobs/Unit50/Mobile units 51 A Mode shooting 1.8.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Mobs/Unit50/Mobile units 51 A Mode shooting.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Mobs/Unit50/Mobile units 51 deg.png" type="Texture" id=28]
[ext_resource path="res://Scenes/Maps/nav3.tres" type="NavigationPolygon" id=29]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 15 ), ExtResource( 14 ) ],
"loop": true,
"name": "shoot",
"speed": 10.0
}, {
"frames": [ ExtResource( 28 ) ],
"loop": true,
"name": "hurt",
"speed": 16.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 19.1464

[sub_resource type="CircleShape2D" id=3]
radius = 153.358

[node name="unit" type="Node2D"]
script = ExtResource( 1 )

[node name="soldier" type="KinematicBody2D" parent="."]
position = Vector2( 0.307358, 0.614716 )
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="soldier"]
position = Vector2( -0.124248, 4.82651 )
scale = Vector2( 2.68152, 4.16585 )
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="soldier"]
position = Vector2( -0.00351712, -4.61323 )
frames = SubResource( 1 )
frame = 9
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="soldier"]
visible = false
position = Vector2( -0.263527, -4.43544 )
shape = SubResource( 2 )

[node name="Hit" type="Timer" parent="soldier"]

[node name="vision" type="Area2D" parent="soldier"]
collision_layer = 17
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="soldier/vision"]
visible = false
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="soldier"]

[node name="solpos" type="Position2D" parent="soldier"]
position = Vector2( 0.204189, 0.834675 )

[node name="pos" type="Position2D" parent="soldier"]
position = Vector2( -0.193718, -16.4655 )

[node name="pos2" type="Position2D" parent="soldier"]
position = Vector2( -0.193718, -13.3661 )

[node name="pos3" type="Position2D" parent="soldier"]
position = Vector2( -0.193718, -9.10444 )

[node name="pos4" type="Position2D" parent="soldier"]
position = Vector2( -0.387428, -6.39248 )

[node name="cosmicgoo" type="Area2D" parent="soldier"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="soldier/cosmicgoo"]
visible = false
position = Vector2( -0.263527, -4.43544 )
shape = SubResource( 2 )

[node name="SoundHit" type="AudioStreamPlayer2D" parent="soldier"]

[node name="navigator" type="Navigation2D" parent="."]
visible = false

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="navigator"]
navpoly = ExtResource( 29 )

[node name="Timer" type="Timer" parent="."]
[connection signal="animation_finished" from="soldier/AnimatedSprite" to="soldier" method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="soldier/Hit" to="soldier" method="_on_Hit_timeout"]
[connection signal="body_entered" from="soldier/vision" to="soldier" method="_on_vision_body_entered"]
[connection signal="timeout" from="soldier/Timer" to="soldier" method="_on_Timer_timeout"]
[connection signal="area_entered" from="soldier/cosmicgoo" to="soldier" method="_on_cosmicgoo_area_entered"]
[connection signal="area_exited" from="soldier/cosmicgoo" to="soldier" method="_on_cosmicgoo_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
